bad/assign_field_bool_of_field_void.example_compiler_output
ERROR
[1mbad/assign_field_bool_of_field_void.lat:11:16: [1;31merror: [0;1massigning to `boolean` from incompatible type `void`[m
	(new D).c.fld = vfunc();
	              [1;32m^[m
